@@ -36,6 +36,8 @@ Other features
  * Add ability to define ``form_classname`` on ``ListBlock`` & ``StreamBlock`` (LB (Ben Johnston))
  * Add documentation about how to use ``Rustface`` for image feature detection (Neal Todd)
  * Improve performance of public/not_public queries in ``PageQuerySet`` (Timothy Bautista)
+ * Add ``add_redirect`` static method to ``Redirect`` class for programmatic redirect creation (Brylie Christopher Oxley, Lacey Williams Henschel)
+ * Add reference documentation for ``wagtail.contrib.redirects`` See :ref:`redirects`. (LB (Ben Johnston))
 
 
 Bug fixes
